Fixed overflowing track title

--- a/src/styles/components/now-playing.scss
+++ b/src/styles/components/now-playing.scss
@@ -50,6 +50,9 @@ html, body {
     font-size: 5vmin; // Use vmin to scale font size based on viewport size
     margin: 0px;
     padding: 0px;
+    white-space: nowrap; /* Prevent text from wrapping */
+    overflow: hidden; /* Hide overflowing text */
+    text-overflow: ellipsis; /* Add ellipsis (...) for truncated text */
   }
 
   &__artists {
@@ -57,5 +60,8 @@ html, body {
     opacity: 0.7;    
     margin: 0px;
     padding: 0px;
+    white-space: nowrap; /* Prevent text from wrapping */
+    overflow: hidden; /* Hide overflowing text */
+    text-overflow: ellipsis; /* Add ellipsis (...) for truncated text */
   }
 }
